--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,67 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+
+.dog-image {
+  cursor: pointer;
+  width: 100%;
+  height: 300px;
+  vertical-align: middle;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.title {
+  font-size: 70px;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.breed-title {
+  font-size: 70px;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+h1 {
+  color: rgb(23, 203, 196);
+  text-align: center;
 }
+
+.image-grid {
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    justify-content: center;
+    justify-items: center;
+    margin: auto;
+    width: 1000px;
+}
+
+.image-grid > .dog-divs {
+  width: 300px;
+}
+
+.image-grid img {
+  width: 100%;
+}
+
+.dog-breed-divs {
+  width: 330px;
+}
+
+.dog-breed-image {
+
+  width: 100%;
+  height: 300px;
+}
+
+.heart-icon {
+  color: rgb(23, 203, 196);
+  font-size: 25px;
+  cursor: pointer;
+}
+
+
+.heart-icon.clicked {
+  color: pink;
+}
+
